[package]
name = "thegn-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true
description = "thegn LLM proxy: dual-protocol router, failover, cost/budget control (groups U/V)"

[[bin]]
name = "tgproxy"
path = "src/main.rs"

[dependencies]
thegn-core = { workspace = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
axum = { workspace = true }
# Widen the workspace tokio/reqwest feature sets for the proxy's I/O shell.
# Cargo unions these with the base features declared in the workspace manifest.
tokio = { workspace = true, features = [
  "net",
  "time",
  "fs",
  "io-util",
  "process",
] }
reqwest = { workspace = true, features = ["stream"] }
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
