[package]
name = "thegn-svc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true
description = "thegn native service layer: git/GitHub/ssh behind traits with CLI fallbacks"

[features]
# The control-plane gRPC surface (tonic server + generated proto bindings).
# The HTTP+WS surface is always built; gRPC is additive for external tooling.
control-grpc = ["dep:tonic", "dep:prost"]

[package.metadata.cargo-machete]
# prost is referenced only by tonic-build's GENERATED proto bindings
# (`include_proto!` expands to `::prost::…` under the control-grpc feature),
# which machete's source scan can't see.
ignored = ["prost"]

[build-dependencies]
# Proto codegen for `control-grpc` (build.rs no-ops without the feature).
tonic-build.workspace = true
protox.workspace = true

[dependencies]
thegn-core.workspace = true
anyhow.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
# git reads go native via gix (Phase 2); GitHub via octocrab GraphQL (Phase 4).
gix.workspace = true
octocrab.workspace = true
reqwest.workspace = true
tokio.workspace = true
chrono.workspace = true
base64 = "0.22"
# Resident-bridge `fs.watch`: inotify in the env, streamed to the host. Matches
# the host's pin so the workspace resolves one version.
notify = "6"
# ACP client transport (newline-JSON over TCP) + request/reply plumbing.
tokio-util = { version = "0.7.18", features = ["codec"] }
futures-channel = "0.3.32"
futures-util = "0.3.32"
# Native provider exec transport (Sprites WSS PTY exec — see provider::SpritesProvider).
tokio-tungstenite.workspace = true
rusty-s3 = "0.10"
# iroh call-home reach: the compositor's home Endpoint (accept loop + per-sandbox
# connection registry) and the exec surface bridged over iroh bi-streams.
iroh.workspace = true
# Control plane (src/control/): the daemon's HTTP+WS surface (axum) + the CLI
# client (hyper one-shot requests over unix/TCP). sha2 hashes token secrets;
# getrandom is the mint-time CSPRNG. hyper/hyper-util/http-body-util are
# already in the tree transitively via axum — pinned here for the client side.
axum = { workspace = true, features = ["ws"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = "0.1"
http-body-util = "0.1"
sha2 = "0.10"
getrandom = "0.3"
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }

# The per-worktree git hot path (is_dirty / ahead_behind / current_branch) that
# the 2s model-refresh ticker fans across every worktree — the dominant idle
# cost. Compares gix-native vs CLI providers over a fixture of N worktrees.
[[bench]]
name = "git_hot"
harness = false
