# superzej-panel — right diff/PR panel (Rust -> WASM zellij plugin).
# Standalone crate (its own workspace). Build with:
#   cargo build --release --target wasm32-wasip1
[package]
name = "superzej-panel"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
zellij-tile = "0.44"
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"

[workspace]
