# superzej-sidebar — left session sidebar (Rust -> WASM zellij plugin).
# Standalone crate (its own workspace) so the host binary's `cargo build` never
# pulls zellij-tile or tries to build it for the host target. Build with:
#   cargo build --release --target wasm32-wasip1
[package]
name = "superzej-sidebar"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
zellij-tile = "0.44"

[profile.release]
strip = true
lto = true
opt-level = "z"

# Self-contained: don't let cargo treat the host repo as a workspace root.
[workspace]
