# superzej-statusbar — a thin, context-aware bottom hint bar (Rust -> WASM).
# Shows the most useful keybinds for the current input mode and tab (home vs
# worktree), styled to the superzej theme — replacing zellij's default two-line
# status bar with a single curated line. Standalone crate (its own workspace) so
# the host binary's `cargo build` never pulls zellij-tile. Build with:
#   cargo build --release --target wasm32-wasip1
[package]
name = "superzej-statusbar"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
zellij-tile = "0.44"
serde_json = "1.0"

[profile.release]
strip = true
lto = true
opt-level = "z"

# Self-contained: don't let cargo treat the host repo as a workspace root.
[workspace]
