# superzej-tabbar — centered worktree (= branch) tab strip (Rust -> WASM).
# Replaces zellij's built-in tab-bar so there's no "Zellij" wordmark and no
# swap-layout ("BASE") indicator — just the worktree/branch tabs, styled to the
# superzej theme. Standalone crate (its own workspace) so the host binary's
# `cargo build` never pulls zellij-tile. Build with:
#   cargo build --release --target wasm32-wasip1
[package]
name = "superzej-tabbar"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
zellij-tile = "0.44"

[profile.release]
strip = true
lto = true
opt-level = "z"

# Self-contained: don't let cargo treat the host repo as a workspace root.
[workspace]
